--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,7 +3,8 @@
 }
 .background-image{
     background-size: cover;
-    background-color:black;
+    background-color:rgb(34, 34, 59);
+    
 
 }
 .field{
@@ -15,35 +16,37 @@
    
     content: normal;
 }
- home{
-    color: orange;
+
+a:hover {
+  background-color: orange;
+  border-radius: 9px;
 }
-a:hover{
-background-color: orange;
-}
-.image{
-    height: auto;
-    width:auto
+.image1{
+   margin: 0%;
+   padding: 0%;
+    display:flex;
+    justify-content: center;
+    top:50px;
 }
 .column{
     display: flex;
     justify-content: center;
     align-items: center;
 }
-ul{
-    background-color
-}
-@media only screen and (max-width: 600px) {
-    li{
-      background-color: lightblue;
-    }
-  }
-  @media only screen and (min-width: 60px) {
-    .background-image{
-        background-size: cover;
-        background-color:r;
-    
-    }
-  }
-  
 
+
+
+
+
+@media only screen and (max-width: 600px) {
+   ul li a{
+      background-color: orange;
+      border-radius:9px;
+      gap:25px;
+      display:block;
+      align-items:vertical
+     
+    }
+    
+  }
+ 
